@@ -49,6 +49,7 @@ Verilator 5.025 devel
 * Fix method calls parsing in constraints (#5110). [Arkadiusz Kozdra, Antmicro Ltd.]
 * Fix vpiInertialDelay for memories (#5113). [Todd Strader]
 * Fix references to ports in forks (#5123). [Krzysztof Bieganski, Antmicro Ltd.]
+* Fix x-valued parameters with `--x-assign unique` (#5129). [Ethan Sifferman]
 
 
 Verilator 5.024 2024-04-05
